[gd_scene load_steps=13 format=3 uid="uid://brw7vdja2dykf"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_00aik"]
[ext_resource type="FontFile" uid="uid://2apr6dgaedyx" path="res://Pixelbroidery-0n0G.ttf" id="2_spk0y"]
[ext_resource type="Texture2D" uid="uid://b1pas5sn0hjys" path="res://art/buttons/resume normal.png" id="3_3y8si"]
[ext_resource type="Texture2D" uid="uid://shb0cbr0vqmw" path="res://art/buttons/quit normal.png" id="3_sf6bt"]
[ext_resource type="Texture2D" uid="uid://ca70jevgk777e" path="res://art/buttons/quit hover.png" id="4_8vfu5"]
[ext_resource type="Texture2D" uid="uid://oxbf8wb14ham" path="res://art/buttons/resume hover.png" id="4_wbq4i"]
[ext_resource type="BitMap" uid="uid://dns1wkt1mwqjd" path="res://art/buttons/start.svg" id="5_5tf42"]
[ext_resource type="BitMap" uid="uid://ceousmbrf48rg" path="res://art/buttons/quit.svg" id="5_y0n0i"]
[ext_resource type="Texture2D" uid="uid://d0gxmpjdstmo0" path="res://art/buttons/quit to menu normal.png" id="9_772cg"]
[ext_resource type="Texture2D" uid="uid://0icoijveyhcl" path="res://art/buttons/quit to menu hover.png" id="10_ptvhw"]
[ext_resource type="BitMap" uid="uid://ckj6ptnt7umpy" path="res://art/buttons/restart.svg" id="11_h0qx8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_68n8a"]
bg_color = Color(0.0705882, 0.0705882, 0.0705882, 0.329412)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_00aik")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -372.0
offset_top = -223.0
offset_right = 565.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
theme_override_styles/panel = SubResource("StyleBoxFlat_68n8a")

[node name="Label" type="Label" parent="Panel"]
layout_mode = 2
offset_left = 377.5
offset_top = 130.0
offset_right = 554.5
offset_bottom = 190.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_spk0y")
theme_override_font_sizes/font_size = 60
text = "Pause"
horizontal_alignment = 1

[node name="Resume" type="TextureButton" parent="Panel"]
layout_mode = 2
offset_left = 368.75
offset_top = 183.75
offset_right = 745.75
offset_bottom = 607.75
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_3y8si")
texture_hover = ExtResource("4_wbq4i")
texture_click_mask = ExtResource("5_5tf42")

[node name="Quit" type="TextureButton" parent="Panel"]
layout_mode = 2
offset_left = 356.25
offset_top = 220.0
offset_right = 749.25
offset_bottom = 612.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("3_sf6bt")
texture_hover = ExtResource("4_8vfu5")
texture_click_mask = ExtResource("5_y0n0i")

[node name="Quit to Menu" type="TextureButton" parent="Panel"]
layout_mode = 2
offset_left = 377.5
offset_top = 220.0
offset_right = 806.5
offset_bottom = 612.0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("9_772cg")
texture_hover = ExtResource("10_ptvhw")
texture_click_mask = ExtResource("11_h0qx8")

[connection signal="pressed" from="Panel/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Panel/Quit to Menu" to="." method="_on_quit_to_menu_pressed"]
